Use a single `customizer` property for JSON logging
Update `StructuredLoggingJsonProperties` no that only a single
`customizer` property is supported.

See gh-43368